fix: bg more transparent in dark mode

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -36,7 +36,7 @@
 		--text-color-link-active: #6969f7;
 		--text-color-link-visited: #a6a6f8;
 
-		--background-color: #15202b;
+		--background-color: #15202bb3;
 		--background-dropdown-color: #2b1520;
 
 		--background-image: url(/img/dark-bg.jpg);
